# RememberIt

./: .gitignore  .gitmodules  README.md  alt.py  bump_version.sh  example.ipynb  fetch_decks_assets.sh  lint.sh  pyproject.toml  tutorial.ipynb
.github/workflows/: pr-checks.yml  publish.yml
src/rememberit/: __init__.py  client.py  config.py  examples.py  formatting.py  models.py  proto.py  templates.py  tools.py
tests/: test_client.py  test_config.py  test_formatting.py  test_models.py  test_proto.py  test_templates.py  test_tools.py
