[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rememberit"
version = "0.1.5"
description = "Python library for syncing flashcards with Anki"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Madhava Jay <me@madhavajay.com>" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "anki>=24.06",
    "requests>=2.28.0",
    "zstandard>=0.21.0",
    "pygments>=2.17.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "mypy>=1.8.0", "ruff>=0.3.0"]

[project.urls]
Homepage = "https://github.com/madhavajay/rememberit"
Repository = "https://github.com/madhavajay/rememberit"
Issues = "https://github.com/madhavajay/rememberit/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "vulture>=2.11",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "types-requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rememberit"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["IPython", "IPython.display", "dialoghelper"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--cov=rememberit", "--cov-report=term-missing"]
